# Decode-Midi

./: .gitignore  CMakeLists.txt  DecodeMidi.dmg  README.md  cat.html  categories.txt  categories_l.txt  clean.sh  createApp.sh  createData.sh  display.cpp  display.h  donwload.sh  home.html  main.cpp  midi.cpp  midi.h  neural.py  pyvenv.cfg  result  result_chords  style.css  temp  test.mid  test2.mid  test3.mid
.github/workflows/: cmake.yml  main.yml
html/: classique.html  electro.html  film-serie.html  folk-country.html  hardrock-metal.html  jazz-blues-soul.html  jeu-video.html  pop-rock.html  rap.html  reggae.html  rnb-funk-disco.html  variete-francaise.html
